--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 li {
@@ -9,6 +10,10 @@ li {
 
 a {
   text-decoration: none;
+}
+
+img {
+  display: block;
 }
 
 .container {
@@ -20,22 +25,29 @@ a {
 }
 
 .header {
+  position: relative;
   display: flex;
   align-items: center;
+  padding: 0 120px;
 }
 .header .logo_box {
-  padding: 10px 50px;
+  position: absolute;
+  margin-left: 30px;
 }
-.header .logo_box img {
-  margin: 0 auto;
+.header .nav_box {
+  width: 100%;
 }
 .header .nav_box ul {
   display: flex;
   justify-content: center;
 }
-.header .nav_box ul li {
+.header .nav_box ul li a {
+  display: block;
   color: #fff;
-  line-height: 70px;
+  line-height: 60px;
+  padding: 10px 25px;
+  font-size: 20px;
+  text-align: center;
 }
 
 main .visual {
@@ -47,19 +59,59 @@ main .visual .visual_bg {
   top: 0;
   background: url(../images/genesis\ visual.jpg) no-repeat;
   background-size: cover;
-  background-position: center;
+  background-position: center center;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 80px);
   z-index: -1;
+}
+main .visual .visual_bg::before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 50%;
+  height: 100%;
+  z-index: -1;
+  background-image: linear-gradient(to left, transparent, #111);
+}
+main .visual .visual_bg::after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 20%;
+  z-index: -1;
+  background-image: linear-gradient(to bottom, transparent, #111);
 }
 main .visual .text_box {
   position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   color: #fff;
-  padding: 100px 300px;
 }
-main .visual .text_box h1 {
+main .visual .text_box .text_inner {
+  padding: 80px 300px 0 300px;
+  display: flex;
+  flex-direction: column;
+}
+main .visual .text_box .text_inner p {
+  font-weight: 500;
+  line-height: 1.2;
+}
+main .visual .text_box .text_inner p.sub {
   font-size: 2rem;
+  margin-bottom: 10px;
 }
-main .visual .text_box p.tit {
-  font-size: 5rem;
+main .visual .text_box .text_inner p.tit {
+  width: 890px;
+  font-size: 4rem;
+  letter-spacing: -5px;
+  margin-bottom: 10px;
+}
+main .visual .text_box .text_inner p.sub_1 {
+  font-size: 20px;
 }/*# sourceMappingURL=main.css.map */
