--- a/css/main.scss
+++ b/css/main.scss
@@ -111,31 +111,56 @@ main {
         display: flex;
         flex-direction: column;
 
-        p {
-          font-weight: 500;
-          line-height: 1.2;
+        .text_top {
+          display: flex;
+          flex-direction: column;
+          justify-content: start;
 
-          &.sub {
-            font-size: 2rem;
-            margin-bottom: 10px;
-          }
+          p {
+            font-weight: 500;
+            line-height: 1.2;
 
-          &.tit {
-            width: 890px;
-            font-size: 4rem;
-            letter-spacing: -5px;
-            margin-bottom: 10px;
-          }
+            &.sub {
+              font-size: 2rem;
+              margin-bottom: 10px;
+            }
 
-          &.sub_1 {
-            font-size: 20px;
+            &.tit {
+              width: 890px;
+              font-size: 4rem;
+              letter-spacing: -5px;
+              margin-bottom: 10px;
+            }
+
+            &.sub_1 {
+              font-size: 20px;
+            }
           }
         }
+
+
       }
 
+    }
 
+    .arrow_bottom {
+      position: absolute;
+      bottom: 40px;
+      left: 50%;
+      width: 15px;
+      height: 15px;
+      font-size: 0;
 
-
+      &::before {
+        content: '';
+        display: block;
+        width: 100%;
+        height: 100%;
+        border: 3px solid #fff;
+        border-width: 0 2px 2px 0;
+        transform: rotate(45deg);
+        cursor: pointer;
+      }
     }
   }
 }
