--- a/css/main.scss
+++ b/css/main.scss
@@ -73,6 +73,17 @@ main {
       width: 100%;
       height: calc(100vh - 80px);
       z-index: -1;
+      animation: bg_ani 1s linear;
+
+      @keyframes bg_ani {
+        0% {
+          opacity: 0;
+        }
+
+        100% {
+          opacity: 1;
+        }
+      }
 
       &::before {
         content: '';
@@ -145,21 +156,36 @@ main {
 
     .arrow_bottom {
       position: absolute;
-      bottom: 40px;
+      bottom: 50px;
       left: 50%;
-      width: 15px;
-      height: 15px;
+      width: 20px;
+      height: 20px;
       font-size: 0;
 
       &::before {
         content: '';
         display: block;
+        position: absolute;
+        bottom: 0;
         width: 100%;
         height: 100%;
         border: 3px solid #fff;
-        border-width: 0 2px 2px 0;
+        border-width: 0 3px 3px 0;
         transform: rotate(45deg);
         cursor: pointer;
+        animation: arrow_ani 1.2s infinite linear;
+
+        @keyframes arrow_ani {
+          0% {
+            bottom: 0;
+            opacity: 1;
+          }
+
+          100% {
+            bottom: -20px;
+            opacity: 0;
+          }
+        }
       }
     }
   }
