--- a/css/main.css
+++ b/css/main.css
@@ -16,10 +16,6 @@ img {
   display: block;
 }
 
-.container {
-  padding: 0 100px;
-}
-
 #wrap {
   background-color: #111;
 }
@@ -30,24 +26,48 @@ img {
   align-items: center;
   padding: 0 120px;
 }
-.header .logo_box {
-  position: absolute;
-  margin-left: 30px;
-}
 .header .nav_box {
   width: 100%;
 }
 .header .nav_box ul {
   display: flex;
-  justify-content: center;
+  justify-content: end;
+}
+.header .nav_box ul li:hover a::before,
+.header .nav_box ul li:hover a::after {
+  width: 40%;
 }
 .header .nav_box ul li a {
+  position: relative;
   display: block;
   color: #fff;
   line-height: 60px;
   padding: 10px 25px;
   font-size: 20px;
   text-align: center;
+  letter-spacing: 5px;
+}
+.header .nav_box ul li a::before {
+  content: "";
+  position: absolute;
+  left: 49%;
+  bottom: 20px;
+  display: block;
+  width: 0;
+  height: 1px;
+  background-color: #fff;
+  transition: all 0.3s;
+}
+.header .nav_box ul li a::after {
+  content: "";
+  position: absolute;
+  right: 50%;
+  bottom: 20px;
+  display: block;
+  width: 0;
+  height: 1px;
+  background-color: #fff;
+  transition: all 0.3s;
 }
 
 main .visual {
@@ -62,7 +82,7 @@ main .visual .visual_bg {
   background-size: cover;
   background-position: center center;
   width: 100%;
-  height: calc(100vh - 80px);
+  height: calc(100vh - 100px);
   animation: bg_ani 1s linear;
 }
 @keyframes bg_ani {
@@ -81,7 +101,6 @@ main .visual .visual_bg::before {
   top: 0;
   width: 50%;
   height: 100%;
-  z-index: -1;
   background-image: linear-gradient(to left, transparent, #111);
 }
 main .visual .visual_bg::after {
@@ -92,7 +111,6 @@ main .visual .visual_bg::after {
   bottom: 0;
   width: 100%;
   height: 20%;
-  z-index: -1;
   background-image: linear-gradient(to bottom, transparent, #111);
 }
 main .visual .text_box {
@@ -114,7 +132,7 @@ main .visual .text_box .text_inner .text_top {
 }
 main .visual .text_box .text_inner .text_top p {
   font-weight: 500;
-  line-height: 1.2;
+  line-height: 1.1;
 }
 main .visual .text_box .text_inner .text_top p.sub {
   font-size: 2rem;
@@ -123,19 +141,20 @@ main .visual .text_box .text_inner .text_top p.sub {
 main .visual .text_box .text_inner .text_top p.tit {
   width: 890px;
   font-size: 4rem;
-  letter-spacing: -5px;
-  margin-bottom: 10px;
+  letter-spacing: -3px;
+  margin-bottom: 15px;
 }
 main .visual .text_box .text_inner .text_top p.sub_1 {
   font-size: 20px;
 }
 main .visual .arrow_bottom {
   position: absolute;
-  bottom: 50px;
+  bottom: 60px;
   left: 50%;
   width: 20px;
   height: 20px;
   font-size: 0;
+  z-index: 1;
 }
 main .visual .arrow_bottom::before {
   content: "";
@@ -160,38 +179,150 @@ main .visual .arrow_bottom::before {
     opacity: 0;
   }
 }
+main .different {
+  padding: 10px 0 30px 0;
+}
+main .different p {
+  text-align: center;
+  color: #ccc;
+  letter-spacing: -1px;
+}
+main .design_section {
+  position: relative;
+  margin: 50px 0;
+}
+main .design_section .design_bg {
+  position: relative;
+}
+main .design_section .design_bg img {
+  width: 100%;
+}
+main .design_section .design_text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding-top: 60px;
+  padding-left: 100px;
+  color: #fff;
+}
+main .design_section .design_text h2 {
+  font-size: 6rem;
+  padding-bottom: 50px;
+}
+main .design_section .design_text .design_desc {
+  width: 520px;
+}
+main .design_section .design_text .design_desc::before {
+  content: "";
+  position: absolute;
+  width: 1px;
+  height: 65px;
+  background-color: #fff;
+}
+main .design_section .design_text .design_desc p {
+  padding-left: 20px;
+}
+main .design_section .design_img {
+  position: absolute;
+  width: 30%;
+  height: 100%;
+  top: 0;
+  right: 0;
+}
+main .design_section .design_img img {
+  width: 100%;
+}
+main .color_section {
+  padding-bottom: 50px;
+}
+main .color_section h1 {
+  font-size: 3rem;
+  margin-bottom: -25px;
+  text-align: center;
+  color: #fff;
+}
+main .color_section .genesis_color {
+  position: relative;
+  width: 100%;
+}
+main .color_section .genesis_color .swiper-wrapper li {
+  opacity: 0;
+  transition: all 1.5s;
+}
+main .color_section .genesis_color .swiper-wrapper li.swiper-slide-active {
+  opacity: 1;
+}
+main .color_section .genesis_color .swiper-wrapper li.swiper-slide-active .color_box img {
+  opacity: 1;
+  animation: active_ani 0.6s linear;
+}
+@keyframes active_ani {
+  50% {
+    transform: translateX(-4%);
+  }
+}
+main .color_section .genesis_color .swiper-wrapper li .color_box img {
+  opacity: 0;
+  margin: 0 auto;
+}
+main .color_section .genesis_color .swiper-pagination .swiper-pagination-bullet {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  margin-right: 15px;
+  opacity: 0.5;
+}
+main .color_section .genesis_color .swiper-pagination .swiper-pagination-bullet:last-child {
+  margin-right: 0;
+}
+main .color_section .genesis_color .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
+  border: 3px solid #ccc;
+  opacity: 1;
+}
+main .color_section .genesis_color .swiper-pagination .swiper-pagination-bullet:nth-child(1) {
+  background-color: #fff;
+}
+main .color_section .genesis_color .swiper-pagination .swiper-pagination-bullet:nth-child(2) {
+  background-color: #47464a;
+}
+main .color_section .genesis_color .swiper-pagination .swiper-pagination-bullet:nth-child(3) {
+  background-color: #000;
+}
+main .color_section .genesis_color .swiper-pagination .swiper-pagination-bullet:nth-child(4) {
+  background-color: blue;
+}
+main .color_section .genesis_color .swiper-pagination .swiper-pagination-bullet:nth-child(5) {
+  background-color: red;
+}
+main .color_section .genesis_color .button {
+  position: absolute;
+  left: 13%;
+  top: 45%;
+  color: #fff;
+  font-weight: 700;
+}
+main .color_section .genesis_color .swiper-button-next {
+  left: auto;
+  right: 13%;
+}
 main .gallery {
   display: flex;
   width: 100%;
-}
-main .gallery img {
-  width: 100%;
-  cursor: pointer;
-}
-main .gallery img.hei {
-  height: 450px;
+  padding: 100px 0;
 }
 main .gallery .gallery_left,
 main .gallery .gallery_center,
 main .gallery .gallery_right {
-  padding-right: 8px;
-  width: 40%;
-}
-main .gallery .gallery_left:last-child,
-main .gallery .gallery_center:last-child,
-main .gallery .gallery_right:last-child {
-  padding-right: 0;
+  width: 34%;
 }
 main .gallery .gallery_left .img_box,
 main .gallery .gallery_center .img_box,
 main .gallery .gallery_right .img_box {
-  margin-bottom: 10px;
+  padding: 4px;
 }
-main .gallery .gallery_left .img_box:last-child,
-main .gallery .gallery_center .img_box:last-child,
-main .gallery .gallery_right .img_box:last-child {
-  margin-bottom: 0;
-}
-main .gallery .gallery_center {
-  width: 32%;
+main .gallery .gallery_left .img_box img,
+main .gallery .gallery_center .img_box img,
+main .gallery .gallery_right .img_box img {
+  width: 100%;
+  cursor: pointer;
 }/*# sourceMappingURL=main.css.map */
