--- a/css/main.css
+++ b/css/main.css
@@ -72,18 +72,37 @@ img {
 
 main .visual {
   position: relative;
-  height: calc(100vh - 80px);
 }
 main .visual .visual_bg {
-  position: absolute;
-  left: 0;
-  top: 0;
-  background: url(../images/genesis\ visual.jpg) no-repeat;
+  /*  background: url(../images/genesis\ visual.jpg) no-repeat;
   background-size: cover;
-  background-position: center center;
+  background-position: center center; */
   width: 100%;
-  height: calc(100vh - 100px);
   animation: bg_ani 1s linear;
+  /* &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 50%;
+    height: 100%;
+    background-image: linear-gradient(to left, transparent, #111);
+  } */
+  /* &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 20%;
+    background-image: linear-gradient(to bottom, transparent, #111);
+  } */
+}
+main .visual .visual_bg video {
+  width: 100%;
+  height: 100%;
 }
 @keyframes bg_ani {
   0% {
@@ -92,26 +111,6 @@ main .visual .visual_bg {
   100% {
     opacity: 1;
   }
-}
-main .visual .visual_bg::before {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 50%;
-  height: 100%;
-  background-image: linear-gradient(to left, transparent, #111);
-}
-main .visual .visual_bg::after {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 20%;
-  background-image: linear-gradient(to bottom, transparent, #111);
 }
 main .visual .text_box {
   position: absolute;
@@ -264,6 +263,7 @@ main .color_section .genesis_color .swiper-wrapper li.swiper-slide-active {
 }
 main .color_section .genesis_color .swiper-wrapper li.swiper-slide-active .color_box img {
   opacity: 1;
+  transform: translateX(0);
   animation: active_ani 0.6s linear;
 }
 @keyframes active_ani {
