--- a/css/main.scss
+++ b/css/main.scss
@@ -89,18 +89,20 @@ img {
 main {
   .visual {
     position: relative;
-    height: calc(100vh - 80px);
 
     .visual_bg {
-      position: absolute;
-      left: 0;
-      top: 0;
-      background: url(../images/genesis\ visual.jpg) no-repeat;
+      /*  background: url(../images/genesis\ visual.jpg) no-repeat;
       background-size: cover;
-      background-position: center center;
+      background-position: center center; */
       width: 100%;
-      height: calc(100vh - 100px);
       animation: bg_ani 1s linear;
+      // height: 100vh;
+
+      video {
+        width: 100%;
+        height: 100%;
+
+      }
 
       @keyframes bg_ani {
         0% {
@@ -112,7 +114,7 @@ main {
         }
       }
 
-      &::before {
+      /* &::before {
         content: '';
         display: block;
         position: absolute;
@@ -121,9 +123,9 @@ main {
         width: 50%;
         height: 100%;
         background-image: linear-gradient(to left, transparent, #111);
-      }
+      } */
 
-      &::after {
+      /* &::after {
         content: '';
         display: block;
         position: absolute;
@@ -132,7 +134,7 @@ main {
         width: 100%;
         height: 20%;
         background-image: linear-gradient(to bottom, transparent, #111);
-      }
+      } */
     }
 
     .text_box {
@@ -289,7 +291,7 @@ main {
       right: 0;
       width: 33%;
 
-      img{
+      img {
         width: 100%;
       }
     }
@@ -325,6 +327,7 @@ main {
             .color_box {
               img {
                 opacity: 1;
+                transform: translateX(0);
                 animation: active_ani 0.6s linear;
               }
             }
