--- a/css/main.scss
+++ b/css/main.scss
@@ -24,7 +24,7 @@ img {
   position: relative;
   display: flex;
   align-items: center;
-  padding: 0 120px;
+  padding: 0 60px;
 
   .nav_box {
     width: 100%;
@@ -47,7 +47,7 @@ img {
           display: block;
           color: #fff;
           line-height: 60px;
-          padding: 10px 25px;
+          padding: 5px 25px;
           font-size: 20px;
           text-align: center;
           letter-spacing: 5px;
@@ -91,17 +91,13 @@ main {
     position: relative;
 
     .visual_bg {
-      /*  background: url(../images/genesis\ visual.jpg) no-repeat;
-      background-size: cover;
-      background-position: center center; */
       width: 100%;
       animation: bg_ani 1s linear;
-      // height: 100vh;
+      height: calc(100vh - 70px);
+      overflow: hidden;
 
       video {
         width: 100%;
-        height: 100%;
-
       }
 
       @keyframes bg_ani {
@@ -145,7 +141,7 @@ main {
       color: #fff;
 
       .text_inner {
-        padding: 80px 300px 0 300px;
+        padding: 80px 200px 0 200px;
         display: flex;
         flex-direction: column;
 
@@ -219,16 +215,6 @@ main {
   }
 
 
-  .different {
-    padding: 10px 0 30px 0;
-
-    p {
-      text-align: center;
-      color: #ccc;
-      letter-spacing: -1px;
-    }
-  }
-
   .design_section {
     position: relative;
     margin: 50px 0;
@@ -258,6 +244,7 @@ main {
       }
 
       .design_desc {
+        position: relative;
         width: 520px;
 
         &::before {
@@ -266,11 +253,61 @@ main {
           width: 1px;
           height: 65px;
           background-color: #fff;
+          margin-right: 20px;
         }
 
         p {
-          padding-left: 20px;
+          width: 100%;
+          margin-left: 10px;
         }
+      }
+
+      .design_btn {
+        text-align: center;
+        padding-top: 20px;
+
+        button {
+          position: relative;
+          display: inline-block;
+          width: 200px;
+          height: 50px;
+          background: none;
+          color: #fff;
+          border: 1px solid #ccc;
+          cursor: pointer;
+
+          span {
+            position: relative;
+            font-size: 18px;
+            letter-spacing: 2px;
+          }
+
+          &:hover {
+            span {
+              color: #000;
+            }
+
+            &::before {
+              width: 100%;
+              opacity: 1;
+              background-color: rgba($color: #fff, $alpha: 1);
+            }
+
+          }
+
+          &::before {
+            content: '';
+            display: block;
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 0;
+            height: 50px;
+            transition: all 0.3s;
+            opacity: 0;
+          }
+        }
+
       }
     }
 
