--- a/css/main.scss
+++ b/css/main.scss
@@ -218,6 +218,7 @@ main {
   .design_section {
     position: relative;
     margin: 50px 0;
+    overflow: hidden;
 
     .design_bg {
       position: relative;
@@ -333,6 +334,27 @@ main {
       }
     }
 
+
+
+    .exterior_pop {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      filter: blur(5px);
+      z-index: 0;
+      
+      .blur {
+        position: absolute;
+        left: 0;top: 0;
+        z-index: 9999;
+        width: 100%;
+        padding: 100px;
+        height: 100%;
+       
+      }
+    }
 
   }
 
