--- a/css/main.scss
+++ b/css/main.scss
@@ -337,23 +337,61 @@ main {
 
 
     .exterior_pop {
+      display: none;
       position: absolute;
       width: 100%;
       height: 100%;
       top: 0;
       left: 0;
-      filter: blur(5px);
-      z-index: 0;
-      
-      .blur {
-        position: absolute;
-        left: 0;top: 0;
-        z-index: 9999;
-        width: 100%;
-        padding: 100px;
-        height: 100%;
-       
+      backdrop-filter: blur(5px);
+
+      .pop_top,
+      .pop_bottom {
+        display: flex;
+
+        .exter_img {
+          width: 60%;
+          transform: translateY(-5%);
+
+          img {
+            width: 100%;
+          }
+        }
+
+        .exter_desc {
+          width: 40%;
+          color: #fff;
+          padding: 60px;
+
+          h2 {
+            font-size: 40px;
+            text-align: center;
+            margin-bottom: 20px;
+          }
+
+          p {
+            font-size: 24px;
+          }
+        }
       }
+
+      .pop_bottom {
+
+        .exter_img {
+          width: 50%;
+          transform: translateY(-16%);
+        }
+
+        .exter_desc {
+          width: 50%;
+          color: #fff;
+
+          h2 {}
+
+          p {}
+        }
+      }
+
     }
 
   }
@@ -387,18 +425,9 @@ main {
               img {
                 opacity: 1;
                 transform: translateX(0);
-                animation: active_ani 0.6s linear;
-              }
-            }
 
-            @keyframes active_ani {
-              50% {
-                transform: translateX(-4%);
               }
 
-              100% {
-                transform: translateX(0);
-              }
             }
           }
 
