--- a/css/main.css
+++ b/css/main.css
@@ -47,11 +47,11 @@ img {
   text-align: center;
   letter-spacing: 5px;
 }
-.header .nav_box ul li a::before {
+.header .nav_box ul li a::before, .header .nav_box ul li a::after {
   content: "";
   position: absolute;
   left: 49%;
-  bottom: 20px;
+  bottom: 17px;
   display: block;
   width: 0;
   height: 1px;
@@ -59,15 +59,7 @@ img {
   transition: all 0.3s;
 }
 .header .nav_box ul li a::after {
-  content: "";
-  position: absolute;
   right: 50%;
-  bottom: 20px;
-  display: block;
-  width: 0;
-  height: 1px;
-  background-color: #fff;
-  transition: all 0.3s;
 }
 
 main .visual {
@@ -78,26 +70,6 @@ main .visual .visual_bg {
   animation: bg_ani 1s linear;
   height: calc(100vh - 70px);
   overflow: hidden;
-  /* &::before {
-    content: '';
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 50%;
-    height: 100%;
-    background-image: linear-gradient(to left, transparent, #111);
-  } */
-  /* &::after {
-    content: '';
-    display: block;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 20%;
-    background-image: linear-gradient(to bottom, transparent, #111);
-  } */
 }
 main .visual .visual_bg video {
   width: 100%;
@@ -178,14 +150,15 @@ main .visual .arrow_bottom::before {
 }
 main .design_section {
   position: relative;
-  margin: 50px 0;
-  overflow: hidden;
+  margin: 150px 0;
 }
 main .design_section .design_bg {
   position: relative;
+  height: calc(100vh - 70px);
 }
 main .design_section .design_bg img {
   width: 100%;
+  height: 100%;
 }
 main .design_section .design_text {
   display: flex;
@@ -193,7 +166,6 @@ main .design_section .design_text {
   position: absolute;
   top: 200px;
   left: 0;
-  padding-top: 100px;
   padding-left: 200px;
   color: #fff;
 }
@@ -243,7 +215,7 @@ main .design_section .design_text .design_btn button:hover span {
 main .design_section .design_text .design_btn button:hover::before {
   width: 100%;
   opacity: 1;
-  background-color: white;
+  background-color: #fff;
 }
 main .design_section .design_text .design_btn button::before {
   content: "";
@@ -253,28 +225,12 @@ main .design_section .design_text .design_btn button::before {
   top: 0;
   width: 0;
   height: 50px;
-  transition: all 0.3s;
+  transition: all 0.4s;
   opacity: 0;
 }
-main .design_section .design_img {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-main .design_section .design_img img {
-  width: 30%;
-}
-main .design_section .design_img1 {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 33%;
-}
-main .design_section .design_img1 img {
-  width: 100%;
-}
-main .design_section .exterior_pop {
-  display: none;
+main .design_section .popup {
+  scale: 0;
+  opacity: 0;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -282,43 +238,93 @@ main .design_section .exterior_pop {
   left: 0;
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
+  transition: all 0.3s;
 }
-main .design_section .exterior_pop .pop_top,
-main .design_section .exterior_pop .pop_bottom {
+main .design_section .popup .pop_top,
+main .design_section .popup .pop_bottom {
   display: flex;
 }
-main .design_section .exterior_pop .pop_top .exter_img,
-main .design_section .exterior_pop .pop_bottom .exter_img {
+main .design_section .popup .pop_top .exter_img,
+main .design_section .popup .pop_top .inter_img,
+main .design_section .popup .pop_bottom .exter_img,
+main .design_section .popup .pop_bottom .inter_img {
   width: 60%;
-  transform: translateY(-5%);
 }
-main .design_section .exterior_pop .pop_top .exter_img img,
-main .design_section .exterior_pop .pop_bottom .exter_img img {
+main .design_section .popup .pop_top .exter_img img,
+main .design_section .popup .pop_top .inter_img img,
+main .design_section .popup .pop_bottom .exter_img img,
+main .design_section .popup .pop_bottom .inter_img img {
   width: 100%;
 }
-main .design_section .exterior_pop .pop_top .exter_desc,
-main .design_section .exterior_pop .pop_bottom .exter_desc {
+main .design_section .popup .pop_top .exter_desc,
+main .design_section .popup .pop_top .inter_desc,
+main .design_section .popup .pop_bottom .exter_desc,
+main .design_section .popup .pop_bottom .inter_desc {
   width: 40%;
   color: #fff;
   padding: 60px;
 }
-main .design_section .exterior_pop .pop_top .exter_desc h2,
-main .design_section .exterior_pop .pop_bottom .exter_desc h2 {
+main .design_section .popup .pop_top .exter_desc h2,
+main .design_section .popup .pop_top .inter_desc h2,
+main .design_section .popup .pop_bottom .exter_desc h2,
+main .design_section .popup .pop_bottom .inter_desc h2 {
   font-size: 40px;
   text-align: center;
   margin-bottom: 20px;
 }
-main .design_section .exterior_pop .pop_top .exter_desc p,
-main .design_section .exterior_pop .pop_bottom .exter_desc p {
+main .design_section .popup .pop_top .exter_desc p,
+main .design_section .popup .pop_top .inter_desc p,
+main .design_section .popup .pop_bottom .exter_desc p,
+main .design_section .popup .pop_bottom .inter_desc p {
   font-size: 24px;
 }
-main .design_section .exterior_pop .pop_bottom .exter_img {
-  width: 50%;
-  transform: translateY(-16%);
+main .design_section .popup .pop_bottom .exter_img {
+  width: 55%;
+  transform: translateY(-13%);
 }
-main .design_section .exterior_pop .pop_bottom .exter_desc {
-  width: 50%;
+main .design_section .popup .pop_bottom .exter_img img {
+  width: 100%;
+}
+main .design_section .popup .pop_bottom .inter_img {
+  width: 38%;
+  transform: translate(-2%, -35.5%);
+}
+main .design_section .popup .pop_bottom .inter_desc {
+  width: 62%;
   color: #fff;
+}
+main .design_section .popup .pop_bottom .exter_desc {
+  width: 45%;
+  color: #fff;
+}
+main .design_section .popup .popup_close {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  border: 2px solid #fff;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  font-size: 0;
+}
+main .design_section .popup .popup_close::before, main .design_section .popup .popup_close::after {
+  content: "";
+  position: absolute;
+  left: 22px;
+  display: block;
+  width: 5px;
+  height: 50px;
+  background-color: #fff;
+  transform: rotate(45deg);
+}
+main .design_section .popup .popup_close::after {
+  transform: rotate(135deg);
+}
+main .design_section .popup .popup_close:hover {
+  background-color: #fff;
+}
+main .design_section .popup .popup_close:hover::before, main .design_section .popup .popup_close:hover::after {
+  background-color: #000;
 }
 main .color_section {
   padding-bottom: 50px;
