--- a/css/main.scss
+++ b/css/main.scss
@@ -52,11 +52,12 @@ img {
           text-align: center;
           letter-spacing: 5px;
 
-          &::before {
+          &::before,
+          &::after {
             content: '';
             position: absolute;
             left: 49%;
-            bottom: 20px;
+            bottom: 17px;
             display: block;
             width: 0;
             height: 1px;
@@ -66,15 +67,7 @@ img {
           }
 
           &::after {
-            content: '';
-            position: absolute;
             right: 50%;
-            bottom: 20px;
-            display: block;
-            width: 0;
-            height: 1px;
-            background-color: #fff;
-            transition: all 0.3s;
 
           }
         }
@@ -110,27 +103,6 @@ main {
         }
       }
 
-      /* &::before {
-        content: '';
-        display: block;
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 50%;
-        height: 100%;
-        background-image: linear-gradient(to left, transparent, #111);
-      } */
-
-      /* &::after {
-        content: '';
-        display: block;
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        height: 20%;
-        background-image: linear-gradient(to bottom, transparent, #111);
-      } */
     }
 
     .text_box {
@@ -217,14 +189,15 @@ main {
 
   .design_section {
     position: relative;
-    margin: 50px 0;
-    overflow: hidden;
+    margin: 150px 0;
 
     .design_bg {
       position: relative;
+      height: calc(100vh - 70px);
 
       img {
         width: 100%;
+        height: 100%;
       }
     }
 
@@ -234,7 +207,6 @@ main {
       position: absolute;
       top: 200px;
       left: 0;
-      padding-top: 100px;
       padding-left: 200px;
       color: #fff;
 
@@ -291,7 +263,7 @@ main {
             &::before {
               width: 100%;
               opacity: 1;
-              background-color: rgba($color: #fff, $alpha: 1);
+              background-color: #fff
             }
 
           }
@@ -304,7 +276,7 @@ main {
             top: 0;
             width: 0;
             height: 50px;
-            transition: all 0.3s;
+            transition: all 0.4s;
             opacity: 0;
           }
         }
@@ -312,53 +284,34 @@ main {
       }
     }
 
-    .design_img {
-      position: absolute;
-      top: 0;
-      left: 0;
 
-      img {
-        width: 30%;
-
-      }
-    }
-
-    .design_img1 {
-      position: absolute;
-      bottom: 0;
-      right: 0;
-      width: 33%;
-
-      img {
-        width: 100%;
-      }
-    }
-
-
-
-    .exterior_pop {
-      display: none;
+    .popup {
+      scale: 0;
+      opacity: 0;
       position: absolute;
       width: 100%;
       height: 100%;
       top: 0;
       left: 0;
       backdrop-filter: blur(5px);
+      transition: all 0.3s;
 
       .pop_top,
       .pop_bottom {
         display: flex;
 
-        .exter_img {
+        .exter_img,
+        .inter_img {
           width: 60%;
-          transform: translateY(-5%);
+          // transform: translateY(-5%);
 
           img {
             width: 100%;
           }
         }
 
-        .exter_desc {
+        .exter_desc,
+        .inter_desc {
           width: 40%;
           color: #fff;
           padding: 60px;
@@ -378,21 +331,67 @@ main {
       .pop_bottom {
 
         .exter_img {
-          width: 50%;
-          transform: translateY(-16%);
+          width: 55%;
+          transform: translateY(-13%);
+
+          img {
+            width: 100%;
+          }
+        }
+
+        .inter_img {
+          width: 38%;
+          transform: translate(-2%, -35.5%);
+        }
+
+        .inter_desc {
+          width: 62%;
+          color: #fff;
         }
 
         .exter_desc {
-          width: 50%;
+          width: 45%;
           color: #fff;
-
-          h2 {}
-
-          p {}
         }
       }
 
+      .popup_close {
+        position: absolute;
+        top: 10px;
+        right: 20px;
+        border: 2px solid #fff;
+        width: 50px;
+        height: 50px;
+        cursor: pointer;
+        font-size: 0;
+
+        &::before,
+        &::after {
+          content: '';
+          position: absolute;
+          left: 22px;
+          display: block;
+          width: 5px;
+          height: 50px;
+          background-color: #fff;
+          transform: rotate(45deg);
+        }
+
+        &::after {
+          transform: rotate(135deg);
+        }
+
+        &:hover {
+          background-color: #fff;
+
+          &::before,
+          &::after {
+            background-color: #000;
+          }
+        }
+      }
     }
+
 
   }
 
